[gd_scene load_steps=4 format=3 uid="uid://v03g3r484t3g"]

[ext_resource type="Script" uid="uid://dlg425636fwe8" path="res://player.gd" id="1_4flbx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4flbx"]
radius = 0.20354

[sub_resource type="CapsuleMesh" id="CapsuleMesh_sh265"]
radius = 0.2

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_4flbx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_4flbx")

[node name="Body" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body"]
visible = false
mesh = SubResource("CapsuleMesh_sh265")
skeleton = NodePath("../..")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.775538, 0)

[node name="Camera" type="Camera3D" parent="Head"]
current = true

[node name="RayCastHead" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -1.2, 0)
hit_back_faces = false

[node name="DashCD" type="Timer" parent="."]
wait_time = 2.0

[node name="DashDuration" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="DashCD" to="." method="_on_dash_cd_timeout"]
[connection signal="timeout" from="DashDuration" to="." method="_on_dash_duration_timeout"]
